--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
             android:minWidth="300dp"
             tools:ignore="UselessParent"
             >
-            <Switch
+            <android.support.v7.widget.SwitchCompat
                 android:id="@+id/title_type_switch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -41,7 +41,7 @@
                 android:text="@string/config_title_type_label"
                 android:textColor="@android:color/black"
                 />
-            <Switch
+            <android.support.v7.widget.SwitchCompat
                 android:id="@+id/advanced_ui_switch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -49,7 +49,7 @@
                 android:text="@string/config_advanced_ui_label"
                 android:textColor="@android:color/black"
                 />
-            <Switch
+            <android.support.v7.widget.SwitchCompat
                 android:id="@+id/response_type_switch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -58,7 +58,7 @@
                 android:text="@string/config_response_type_label"
                 android:textColor="@android:color/black"
                 />
-            <Switch
+            <android.support.v7.widget.SwitchCompat
                 android:id="@+id/state_param_switch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -66,7 +66,7 @@
                 android:text="@string/confirm_state_param_label"
                 android:textColor="@android:color/black"
                 />
-            <Switch
+            <android.support.v7.widget.SwitchCompat
                 android:id="@+id/facebook_notification_switch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -75,7 +75,7 @@
                 android:text="@string/confirm_facebook_notification_label"
                 android:textColor="@android:color/black"
                 />
-            <Switch
+            <android.support.v7.widget.SwitchCompat
                 android:id="@+id/whitelist_blacklist_switch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -83,7 +83,7 @@
                 android:text="@string/use_manual_whitelistblacklist_label"
                 android:textColor="@android:color/black"
                 />
-            <Switch
+            <android.support.v7.widget.SwitchCompat
                 android:id="@+id/read_phone_state_switch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -92,7 +92,7 @@
                 android:text="@string/read_phone_state_label"
                 android:textColor="@android:color/black"
                 />
-            <Switch
+            <android.support.v7.widget.SwitchCompat
                 android:id="@+id/receive_sms_switch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -114,7 +114,7 @@
                     android:text="@string/config_theme_label"
                     android:textColor="@android:color/black"
                     />
-                <Spinner
+                <android.support.v7.widget.AppCompatSpinner
                     android:id="@+id/theme_spinner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -144,7 +144,7 @@
                         android:text="@string/config_entry_button_label"
                         android:textColor="@android:color/black"
                         />
-                    <Spinner
+                    <android.support.v7.widget.AppCompatSpinner
                         android:id="@+id/entry_button_spinner"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -166,7 +166,7 @@
                         android:text="@string/config_confirm_button_label"
                         android:textColor="@android:color/black"
                         />
-                    <Spinner
+                    <android.support.v7.widget.AppCompatSpinner
                         android:id="@+id/confirm_button_spinner"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -188,7 +188,7 @@
                         android:text="@string/config_text_position_label"
                         android:textColor="@android:color/black"
                         />
-                    <Spinner
+                    <android.support.v7.widget.AppCompatSpinner
                         android:id="@+id/text_position_spinner"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
